# rougechain-node

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  DEPLOYMENT_HOSTINGER.md  DEPLOYMENT_NETLIFY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  PUBLIC_API.md  QUICK_START_VPS.sh  README.md  RELEASE_v1.0.0.md  TROUBLESHOOTING_TRANSACTIONS.md  WHITEPAPER.md  deploy-srv421059.sh  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  prometheus.yml  tailwind.config.ts  vite.config.ts
.cursor/rules/: shell-powershell.mdc
.github/workflows/: docs.yml
.lovable/: plan.md
blog/: sdk-v1-launch.md
browser-extension/: README.md  package-lock.json  package.json  vite.config.ts
browser-extension/public/: manifest.json
browser-extension/src/: index.css
contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: BridgeVault.sol  RougeBridge.sol  TestXRGE.sol
contracts/erc20_template/: Cargo.toml  README.md
contracts/scripts/: deploy-all.ts  deploy-mainnet.ts  deploy.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
core/: Cargo.toml  README.md  build_output.txt
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/consensus/: Cargo.toml
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/crypto/src/stark/: air.rs  commitment.rs  mod.rs  prover.rs  rollup_air.rs  rollup_prover.rs  shielded_air.rs  shielded_prover.rs  verifier.rs
core/daemon/: Cargo.toml  build.rs  genesis-devnet.json  genesis.json
core/daemon/src/: amm.rs  bridge_verifier.rs  dashboard.rs  grpc.rs  indexer.rs  jsonrpc.rs  main.rs  nft_store.rs  node.rs  order_book.rs  peer.rs  pool_events.rs  pool_store.rs  rollup.rs  websocket.rs
core/p2p/: Cargo.toml
core/proto/: quantum_vault.proto
core/storage/: Cargo.toml
core/storage/src/: allowance_store.rs  bridge_claim_store.rs  bridge_withdraw_store.rs  chain_store.rs  commitment_store.rs  governance_store.rs  lib.rs  lock_store.rs  mail_store.rs  messenger_store.rs  multisig_store.rs  name_registry.rs  nullifier_store.rs  push_token_store.rs  receipt_store.rs  social_store.rs  state_root.rs  token_metadata_store.rs  token_stake_store.rs  validator_store.rs
core/types/: Cargo.toml
core/vm/: Cargo.toml
core/wasm-prover/: Cargo.toml
docs/: README.md  SUMMARY.md  book.json  book.toml  changelog.md  netlify.toml  troubleshooting.md
docs/advanced/: architecture.md  browser-extensions.md  cli.md  mcp-server.md  messaging.md  multi-sig.md  pqc-cryptography.md  sdk.md  smart-contracts.md  token-creation.md
docs/api-reference/: README.md  blocks.md  bridge.md  dex.md  health.md  mail.md  messenger.md  nfts.md  peers.md  push-notifications.md  smart-contracts.md  staking.md  transactions.md  wallet.md
docs/bridge/: README.md  contract.md  eth-bridge.md  relayer.md  usdc-bridge.md  xrge-bridge.md
docs/dex/: README.md  pools.md  swaps.md
docs/explorer/: README.md  addresses.md  blocks.md  contracts.md  transactions.md
docs/getting-started/: README.md  create-wallet.md  faucet.md  quick-start.md
docs/nfts/: README.md  collections.md  minting.md
docs/p2p-networking/: README.md  connecting.md  discovery.md  public-node.md
docs/running-a-node/: README.md  auto-deploy.md  configuration.md  docker.md  installation.md  mining.md  windows.md
docs/staking/: README.md  becoming-validator.md  rewards.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
node/: CONSENSUS.md  DEPLOYMENT.md  FEES.md  PERFORMANCE.md  README.md  tsconfig.json
node/src/: codec.ts  index.ts  node.ts  types.ts
public/: manifest.json  prover.html  robots.txt  sitemap.xml  stark-prover.wasm  sw.js
scripts/: README.md  auto-deploy.sh  bridge-relayer.ts  seed-testnet-tokens.mjs
sdk/: README.md  package-lock.json  package.json  smoke-test-mnemonic.mjs  smoke-test-shielded.mjs  stress-test.mjs  tsconfig.json  tsup.config.ts
sdk/examples/: connect-test.html
sdk/src/: address.ts  client.ts  index.ts  mnemonic.ts  noble-hashes.d.ts  shielded.ts  signer.ts  types.ts  utils.ts  wallet.ts
src/: App.tsx  index.css
src/components/: Footer.tsx  MainNav.tsx  RougeAddressLink.tsx  Sidebar.tsx
src/hooks/: use-blockchain-ws.ts  use-eth-price.ts  use-p2p-node.ts  use-token-metadata.ts  use-token-prices.ts  use-xrge-price.ts  useRougeAddress.ts
src/lib/: bridge.ts  contact-nicknames.ts  extension-bridge.ts  image-utils.ts  mnemonic.ts  network.ts  node-api.ts  note-store.ts  notifications.ts  pqc-blockchain.ts  pqc-mail.ts  pqc-messenger.ts  pqc-signer.ts  (+7 more)
supabase/: config.toml
(+128 files in other folders)
