[package]
name = "quantum-vault-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
fips204 = "0.4"
quantum-vault-types = { path = "../types" }
getrandom = "0.2"
bech32 = "0.11"
hmac = "0.12"

# zk-STARK proof system (quantum-resistant, hash-based)
winterfell = "0.13"
